<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.fecap.fecap_social.LoginActivity">

    <ImageView
        android:id="@+id/iconVoltar01"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="Botão para voltar para a tela anterior"
        android:onClick="voltarTelaConfig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.040"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/logofecap"
        android:layout_width="190dp"
        android:layout_height="140dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iconVoltar01"
        app:srcCompat="@drawable/logo_fecap_social" />

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="Login"
        android:textColor="#142755"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/logofecap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/inputTokenLogin"
        android:layout_width="365dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:paddingStart="12dp"
        android:textSize="18sp"
        android:textColorHint="#142755"
        android:background="@drawable/borderradius"
        android:hint="Digite seu email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLogin" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputSenhaLogin"
        android:layout_width="365dp"
        android:layout_height="70dp"
        android:layout_marginTop="12dp"
        android:textColorHint="#142755"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputTokenLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputSenhaLogin"
            android:layout_width="365dp"
            android:layout_height="70dp"
            android:paddingStart="12dp"
            android:textSize="18sp"

            android:background="@drawable/borderradius"
            android:hint="Digite sua senha"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="365dp"
        android:layout_height="54dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="55dp"
        android:backgroundTint="#FCBA51"
        android:text="Entrar"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:onClick="botaoEntrarLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputSenhaLogin" />

    <TextView
        android:id="@+id/textRealizarCadastro"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:onClick="mudarTelaCadastro"
        android:padding="4dp"
        android:text="Realizar Cadastro"
        android:textColor="#142755"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEntrar"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:onClick="mudarTelaEsqueciSenha"
        android:padding="4dp"
        android:text="Esqueceu senha?"
        android:textColor="#142755"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textRealizarCadastro"
        app:layout_constraintTop_toBottomOf="@+id/btnEntrar"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>